// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`areaPageBuilder should build area page 1`] = `
"{{New Content}}
{{Infobox Location
|name = Test Area
|image = [[File:Test Area.png|300px]]
|members = Yes
|location = 
|wilderness = 
|teleport = 
|music = 
|type = 
}}
[[File:Test Area.png|300px|left]]
'''Test Area''' is an area."
`;

exports[`areaPageBuilder should build area page with context 1`] = `
"{{New Content}}
{{Infobox Location
|name = Test Area
|image = [[File:Test Area.png|300px]]
|update = Test Update
|members = Yes
|location = 
|wilderness = 
|teleport = 
|music = 
|type = 
}}
[[File:Test Area.png|300px|left]]
'''Test Area''' is an area."
`;

exports[`areaPageBuilder should build area page with map and nearest location parameters 1`] = `
"{{New Content}}
{{Infobox Location
|name = Test Area
|image = [[File:Test Area.png|300px]]
|update = Test Update
|members = Yes
|location = 
|wilderness = 
|teleport = 
|music = 
|map = {{Map|name=Test Area|x=2664|y=3102|plane=0|mapID=-1|mtype=pin}}
|type = 
}}
[[File:Test Area.png|300px|left]]
'''Test Area''' is an area."
`;

exports[`areaPageBuilder should build area page with map parameter when WorldMap element exists 1`] = `
"{{New Content}}
{{Infobox Location
|name = Test Area
|image = [[File:Test Area.png|300px]]
|update = Test Update
|members = Yes
|location = 
|wilderness = 
|teleport = 
|music = 
|map = {{Map|name=Test Area|x=2664|y=3102|plane=0|mapID=-1|mtype=pin}}
|type = 
}}
[[File:Test Area.png|300px|left]]
'''Test Area''' is an area."
`;
